--- a/aulateste.html
+++ b/aulateste.html
@@ -41,17 +41,15 @@
             border-radius: 15px;
         }
 
-        #bottombox3 {
-            width: 400px;
-            height: 345px;
+        .box3 {
+            width: 200px;
+            height: 300px;
             background-color: black;
+            border: 1px solid white;
+            border-radius: 15px;
         }
 
-        #bottombox4 {
-            width: 400px;
-            height: 345px;
-            background-color: black;
-        }
+    
 
         #ball {
             width: 175px;
@@ -62,6 +60,7 @@
             background-position: center;
             background-size: cover;
             margin: auto;
+            border: 5px solid black;
         }
 
         .btn-style {
@@ -74,6 +73,7 @@
             border-radius: 10px;
             color: white;
             margin: 0 20px;
+            border: 1px solid red;
 
         }
 
@@ -97,11 +97,12 @@
 
             <div class="btn">
                 <div class="btn-style">
-                    <p style="margin: 20px;">BOTÃO 1</p>
+                    <p style="margin: 5px;">BOTÃO 1</p>
                 </div>
 
                 <div class="btn-style">
                     <p>BOTÃO 2</p>
+                    
                 </div>
             </div>
 
@@ -122,8 +123,8 @@
                 <div class="box2"></div>
             </div>
             <div name="coluna3">
-                <div class="bottombox2"></div>
-
+                <div class="box3"></div>
+                <div class="box3"></div>
             </div>
 
         </div>
